common_config_files/web-app-2.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app-2
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-app-2
  template:
    metadata:
      labels:
        app: web-app-2
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-index-config
          mountPath: /usr/share/nginx/html
      volumes:
      - name: nginx-index-config
        configMap:
          name: nginx-config-2
---
apiVersion: v1
kind: Service
metadata:
  name: web-app-2
  namespace: default
spec:
  selector:
    app: web-app-2
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 80
