common_config_files/routing-by-path.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-app-route-by-path
  namespace: default
spec:
  parentRefs:
    - name: gateway
      sectionName: web
    - name: gateway
      sectionName: websecure
  hostnames:
  # Used for testing with local cluster
    - "web-app.localhost"
  # Used for testing with Azure Cluster
    - "www.example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /app1
    backendRefs:
    - name: web-app-1
      port: 80
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
  - matches:
    - path:
        type: PathPrefix
        value: /app2
    backendRefs:
    - name: web-app-2
      port: 80
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
